# libism

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demorecognizer.cpp  demorecorder.cpp  printer.cpp  trainer.cpp  voteExtractor.cpp
ISM/: CMakeLists.txt  DataCollector.hpp  DirectionOrientationRelationHeuristic.cpp  DirectionOrientationRelationHeuristic.hpp  DirectionRelationHeuristic.cpp  DirectionRelationHeuristic.hpp  Heuristic.hpp  JsonStream.cpp  JsonStream.hpp  MathHelper.cpp  MathHelper.hpp  MinMaxFinder.hpp  Object.cpp  Object.hpp  ObjectSet.cpp  ObjectSet.hpp  Pattern.cpp  Pattern.hpp  Point.cpp  Point.hpp  Pose.cpp  Pose.hpp  Quaternion.cpp  Quaternion.hpp  RecognitionResult.cpp  RecognitionResult.hpp  Recognizer.cpp  Recognizer.hpp  RecordedPattern.cpp  RecordedPattern.hpp  Recorder.cpp  Recorder.hpp  Serializable.hpp  StaticRelationHeuristic.cpp  StaticRelationHeuristic.hpp  TableHelper.cpp  TableHelper.hpp  Track.cpp  Track.hpp  Tracks.cpp  (+12 more)
python/: 3patterns.json  cluster.json  drawData.py  nocluster.json  paper.json  pattern.json  pattern2.json  pattern3.json  quiver.py  voted.json
src/: dataMerger.cpp  demorecognizer.cpp  demorecorder.cpp  modelCleaner.cpp  recordingMerger.cpp  testRunner.cpp  trainer.cpp  trainingValidator.cpp  validator.cpp  voteExtractor.cpp
